action suppression ok

--- a/src/main/resources/templates/edit_restaurant.html
+++ b/src/main/resources/templates/edit_restaurant.html
@@ -189,7 +189,7 @@
 
       <!-- Colonne droite : bouton valider -->
       <div class="col-md-4 d-flex flex-column justify-content-end align-items-end">
-        <button type="submit" class="btn btn-primary mt-auto">Valider les modifications</button>
+        <button type="submit" class="btn btn-valider mt-auto">Valider les modifications</button>
       </div>
     </div>
   </form>
