--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3,7 +3,7 @@ body {
     font-optical-sizing: auto;
     background-color: #B8CBD0;
     padding-top: 144px;
-    /* margin : 20px; */
+
 }
 
 .navbar-custom {
@@ -153,8 +153,11 @@ button {
     font-weight: bold;
     background-color: #B8CBD0;
     color : black;
-    width: 400px;
-    height: 250px;
+    width: 100%; /* Change to percentage for responsiveness */
+    max-width: 400px; /* Add max-width to control the maximum size */
+    height: auto; /* Change to auto for responsiveness */
+    margin-bottom: 20px;
+
 }
 
 .rectangle-client {
@@ -164,8 +167,10 @@ button {
     font-weight: bold;
     background-color: #709CA7;
     color : black;
-    width: 400px;
-    height: 250px;
+    width: 100%; /* Change to percentage for responsiveness */
+    max-width: 400px; /* Add max-width to control the maximum size */
+    height: auto; /* Change to auto for responsiveness */
+    margin-bottom: 20px;
 }
 
 .rectangle-gerant {
@@ -175,8 +180,10 @@ button {
     font-weight: bold;
     background-color: #344D59;
     color : white;
-    width: 400px;
-    height: 250px;
+    width: 100%; /* Change to percentage for responsiveness */
+    max-width: 400px; /* Add max-width to control the maximum size */
+    height: auto; /* Change to auto for responsiveness */
+    margin-bottom: 20px;
 }
 
 .bgd-mdp input{
@@ -196,7 +203,7 @@ button {
         }
 .form-email label {
             margin-right: 40px;
-            margin-left: 100;
+/*              margin-left: 100px; /* Adjust margin for responsiveness */ */
             width: 105px;
         }
 .form-email input {
@@ -211,7 +218,7 @@ button {
 }
 .form-mdp label {
             margin-top : 10px;
-            margin-left: 100;
+            /* margin-left: 100px; /* Adjust margin for responsiveness */ */
             width: 120px;
 }
 
@@ -222,7 +229,8 @@ button {
         font-weight: bold;
         background-color: #344D59;
         color : white;
-        width: 300px;
+        width: 100%; /* Change to percentage for responsiveness */
+        max-width: 300px; /* Add max-width to control the maximum size */
         height: 60px;
         align-items: center;
 }
@@ -238,7 +246,8 @@ button {
         font-weight: bold;
         background-color: #7A90A4;
         color : white;
-        width: 300px;
+        width: 100%; /* Change to percentage for responsiveness */
+        max-width: 300px; /* Add max-width to control the maximum size */
         height: 60px;
         align-items: center;
 }
@@ -254,11 +263,20 @@ button {
         font-weight: bold;
         background-color: #7A90A4;
         color : white;
-        width: 300px;
+        width: 100%; /* Change to percentage for responsiveness */
+        max-width: 300px; /* Add max-width to control the maximum size */
         height: 60px;
         align-items: center;
     }
 
 .nav-button-gerant:hover {
     background-color: #709CA7;
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -50px; /* Ajustez cette valeur pour remonter l'image */
+    margin-left: -100px; /* Ajustez cette valeur pour remonter l'image */
 }
