--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -113,31 +113,32 @@ body {
 }
 
 
-/* CSS Adam 
+/* CSS ADAM 1
+PAGE FORMULAIRE RESTAURANT
 
 placeholder = carré central (imageResto)
 control = champs
 encadre = encadre des champs
 
 */
-body {
-      background-color: #B8CBD0;
-    }
-    form.container {
+
+    .form.container {
       width: 90%;
       max-width: none;
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.0);
     }
-    label {
+    .form-label {
       color: #000000;
     }
     .form-btn-custom {
       background-color: #7A90A4;
       border-color: #7A90A4;
+      border-radius: 10px;
       color: white;
       width: 50%;
+      
     }
     .form-control {
       background-color: #FFFFFF;
@@ -176,6 +177,40 @@ body {
     color: #d4d3d3;     
     font-style: italic;
 }
+/*ADAM 2
+
+PAGE SUCCESS*/
+    
+    #succes-h1 {
+      color: #137C8B;
+    }
+    /* Couleur du texte général */
+    #succes-p {
+      color: #344D59;
+    }
+    /* parametres boutons*/
+    .bouton-succes {
+      background-color: #7A90A4;
+      border-color: #7A90A4;
+      color: white;
+      border-radius: 15px;
+      padding: 8px 20px;
+      font-weight: bold;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+      text-decoration: none;
+      display: inline-block;
+    }
+    .bouton-succes:hover {
+      background-color: #344D59;
+      border-color: #344D59;
+      color: white;
+    }
+    /* Personnalisation du conteneur pour une meilleure lisibilité */
+    .container {
+      padding: 5rem;
+    }
+   
+
 
 /* CSS Vincent */
 .rectangle-membre {
