--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -1,35 +1,32 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Succès</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <style>
-      
-      .btn-electric-blue {
-          background-color: #1E90FF; 
-          border-color: #1E90FF;
-          color: white;
-      }
-      .btn-electric-blue:hover {
-          background-color: #1C86EE;
-          border-color: #1C86EE;
-          color: white;
-      }
-    </style>
-</head>
-<body class="bg-light">
-    <div class="container mt-5 text-center">
-        <h1 class="text-success">Inscription réussie !</h1>
-        <p>Le restaurant a bien été enregistré.</p>
-        <div class="d-flex justify-content-center gap-3">
-           
-            <!-- Bouton pour accéder aux détails du restaurant inscrit -->
-            <a th:href="@{/admin/list/{id}(id=${param.restaurantId})}" class="btn btn-electric-blue">Accéder dès maintenant à votre restaurant</a>
+  <meta charset="UTF-8">
+  <title>Succès</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="icon" th:href="@{/images/favicon.ico}" type="image/x-icon">
 
-             <!-- Bouton pour recommencer une nouvelle inscription -->
-            <a href="/restaurants/formulaire" class="btn btn-electric-blue">Commencer une nouvelle inscription</a>
-        </div>
+</head>
+<body class="d-flex flex-column min-vh-100">
+    <main class="flex-grow-1">
+  <div class="container mt-5 text-center">
+    <h1 id="succes-h1">Inscription réussie !</h1>
+    <p id="succes-p">Le restaurant a bien été enregistré.</p>
+    <div class="d-flex justify-content-center gap-3 mt-4">       
+      <!-- Bouton pour accéder aux détails du restaurant inscrit -->
+      <a th:href="@{/admin/list/{id}(id=${param.restaurantId})}" class="btn bouton-succes">Accéder dès maintenant à votre restaurant</a>
+      <!-- Bouton pour recommencer une nouvelle inscription -->
+      <a href="/admin/restaurants/formulaire" class="btn bouton-succes">Commencer une nouvelle inscription</a>
     </div>
+  </div>
+</main>
+<!-- Footer -->
+  <footer class="text-center mt-5 mb-3">
+    &copy; 2025 - GourmetGo
+  </footer>
 </body>
 </html>
