--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -28,7 +28,7 @@
             <a th:href="@{/admin/list/{id}(id=${param.restaurantId})}" class="btn btn-electric-blue">Accéder dès maintenant à votre restaurant</a>
 
              <!-- Bouton pour recommencer une nouvelle inscription -->
-            <a href="/restaurants/formulaire" class="btn btn-electric-blue">Commencer une nouvelle inscription</a>
+            <a href="/admin/restaurants/formulaire" class="btn btn-electric-blue">Commencer une nouvelle inscription</a>
         </div>
     </div>
 </body>
