--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,13 +2,34 @@ body {
     font-family: "Lexend", sans-serif;
     font-optical-sizing: auto;
     background-color: #B8CBD0;
-    padding-top: 144px;
-    /* margin : 20px; */
+    padding-top : 96px;
+    font-size: 0.9rem;
+}
+
+/* À partir de 912px de largeur : padding-top réduit */
+@media (max-width: 910px) {
+    main {
+        padding-top: 30px;
+    }
+}
+
+@media (max-width:767px){
+    main {
+        padding-top: 1px;
+        font-size: 10px;
+    }
 }
 
 .navbar-custom {
     background-color: #709CA7;
 }
+
+.navbar-custom2 .d-flex {
+    flex-direction: row;
+    justify-content: center;
+    gap: 10px;
+}
+
 .nav-button {
     border-radius: 15px;
     padding: 8px 20px;
@@ -45,6 +66,13 @@ body {
     color : white;
 }
 
+@media (max-width:767px){
+    .button-accueilGR {
+        font-size: 15px;
+        padding: 0px 10px;
+    }
+}
+
 /* fiche_restaurant */
 .fiche-container {
     margin-top: 40px;
@@ -56,6 +84,10 @@ body {
 }
 .section-gauche, .section-droite {
     min-height: 100%;
+}
+
+.section-gauche {
+  padding-left: 4rem;
 }
 
 .info-bloc {
@@ -71,6 +103,7 @@ body {
     font-weight: bold;
     background-color: #7A90A4;
     color : white;
+    width : 200px;
 }
 
 .btn-resto {
@@ -79,6 +112,7 @@ body {
     font-weight: bold;
     background-color: #7A90A4;
     color : white;
+    width : 200px;
 }
 
 /* Page liste restaurant */
@@ -91,6 +125,8 @@ body {
     color: #344D59;
     text-decoration: underline;
 }
+
+
 
 /* Page modification */
 .bloc-modif, .bloc-modif-nom, .btn-valider{
