--- a/src/main/resources/templates/fiche_restaurant.html
+++ b/src/main/resources/templates/fiche_restaurant.html
@@ -45,17 +45,9 @@
     </nav>
 
     <!-- DEUXIEME NAV BAR -->
-    <nav class="navbar navbar-expand-md navbar-custom2 py-1 fixed-top" style="top: 96px">
-        <div class="container-fluid justify-content-between">
-            <!-- Bouton burger -->
-            <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarButtons"
-            aria-controls="navbarButtons" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <!-- Contenu à cacher/afficher -->
-            <div class="collapse navbar-collapse justify-content-center" id="navbarButtons">
-                <div class="d-flex flex-column flex-md-row gap-2 mt-3 mt-md-0">
+    <nav class="navbar navbar-expand-md navbar-custom2 py-1" style="top: 0px">
+        <div class="container-fluid justify-content-center">
+                <div class="d-flex flex-md-row gap-2 mt-3 mt-md-0">
                     <a href="/admin/restaurants/formulaire" class="btn button-accueilGR">Créer un compte restaurant</a>
                     <a href="/admin/clients" class="btn button-accueilGR">Rechercher un restaurant</a>
                     <a href="/admin/list" class="btn button-accueilGR">Liste des restaurants</a>
@@ -110,7 +102,7 @@
             </div>
 
             <!-- Colonne droite -->
-            <div class="col-md-3 section-droite d-flex flex-column justify-content-between">
+            <div class="col-md-1 section-droite d-flex flex-column justify-content-between">
                 <!-- Boutons haut droite -->
                 <div class="text-center">
                     <a th:href="@{'/admin/restaurants/edit/' + ${restaurant.id}}" class="btn btn-modif mb-2">Modifier</a>
@@ -129,6 +121,8 @@
                     <a href="#" class="btn btn-resto ">Promotions</a>
                 </div>
             </div>
+
+            <div class></div>
         </div>
     </div>
 
