commit password encryption 01

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,7 +23,7 @@
                         <form method="post" th:action="@{/auth-login}">
                             <div class="form-email">
                                 <label for="email">Email :</label>
-                                <input type="text" id="email" name="email" placeholder="Email" class="form-control" required/>
+                                <input type="email" id="email" name="email" placeholder="Email" class="form-control" required/>
                             </div>
                             <div class="row align-items-center">
                                 <div class="form-mdp col-auto">
@@ -58,7 +58,7 @@
                             <form method="post" th:action="@{/client-login}">
                                 <div class="form-email">
                                     <label for="clientEmail">Email :</label>
-                                    <input type="text" id="clientEmail" name="clientEmail" placeholder="Email" class="form-control" required/>
+                                    <input type="email" id="clientEmail" name="clientEmail" placeholder="Email" class="form-control" required/>
                                 </div>
                             <div class="row align-items-center">
                                 <div class="form-mdp col-auto">
@@ -84,7 +84,7 @@
                         <form method="post" th:action="@{/gerant-login}">
                         <div class="form-email">
                             <label for="gerantEmail">Email :</label>
-                            <input type="text" id="gerantEmail" name="gerantEmail" placeholder="Email" class="form-control"/>
+                            <input type="email" id="gerantEmail" name="gerantEmail" placeholder="Email" class="form-control"/>
                         </div>
                                 <div class="row align-items-center">
                                     <div class="form-mdp col-auto">
