--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,6 +14,9 @@
     </style>
 </head>
 <body>
+    <div class="title" >
+        <h1>Gourmet Go</h1>
+    </div>
     <div class="container mt-5">
         <div class="row">
           <h2></h2>
