--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,26 +2,15 @@ body {
     font-family: "Lexend", sans-serif;
     font-optical-sizing: auto;
     background-color: #B8CBD0;
-    padding-top : 96px;
     font-size: 0.9rem;
-}
-
-/* À partir de 912px de largeur : padding-top réduit */
-@media (max-width: 910px) {
-    main {
-        padding-top: 30px;
-    }
-}
-
-@media (max-width:767px){
-    main {
-        padding-top: 1px;
-        font-size: 10px;
-    }
+    overflow-x: hidden;
 }
 
 .navbar-custom {
     background-color: #709CA7;
+    position: sticky;
+    top : 0;
+    z-index: 1030;
 }
 
 .navbar-custom2 .d-flex {
@@ -58,6 +47,10 @@ body {
     background-color: #709CA7;
 }
 
+.btn-central{
+    font-size: 20px;
+    font-weight: bold;
+}
 .button-accueilGR {
     border-radius: 15px;
     padding: 8px 20px;
@@ -74,12 +67,9 @@ body {
 }
 
 /* fiche_restaurant */
-.fiche-container {
-    margin-top: 40px;
-}
 .image-resto {
-    width:500px;
-    height: auto;
+    max-width:500px;
+    max-height: 400px;
     border-radius: 10px;
 }
 .section-gauche, .section-droite {
@@ -88,6 +78,22 @@ body {
 
 .section-gauche {
   padding-left: 4rem;
+}
+
+@media (max-width:767px) {
+    .section-gauche {
+        padding-left : 3rem;
+        padding-right: 3rem;
+    }
+
+    .btn-modif {
+        margin-top: 1rem;
+    }
+    
+}
+
+#nomResto {
+   margin-top: 5px;
 }
 
 .info-bloc {
@@ -129,24 +135,28 @@ body {
 
 
 /* Page modification */
-.bloc-modif, .bloc-modif-nom, .btn-valider{
+.btn-valider{
     background-color: #709CA7;
     border-radius: 15px;
-    padding: 8px 20px;
+    padding: 8px 10px;
     box-shadow: 0 2px 6px black;
+    width : 200px;
 }
 
 .btn-valider:hover{
-    background-color: #2c3438;
+    background-color: #90bad4;
 }
 
-.bloc-modif-nom{
-    width: 400px;
-    margin: 0 auto; 
-    font-family: Arial, sans-serif;
-    margin: 20px;
-    background-color: #f4f4f4;
+@media (max-width:992px){
+    .btn-valider {
+        margin-top: 15px;
+    }
 }
+
+.col-valider {
+    align-items: center;
+}
+
 
 /* Reprise fichier Adam */
 /* h1 {
