javaDoc class Controller / Tests Junit RestaurantEntityTest : OK / Création des class Test RestaurantServiceTest et RestaurantControllerTest

--- a/src/main/resources/templates/formulaire.html
+++ b/src/main/resources/templates/formulaire.html
@@ -181,9 +181,9 @@
         </div>
         
         <!-- Colonne droite : Boutons -->
-        <div class="col-md-4 d-flex flex-column align-items-center">
-          <button type="submit" class="form-btn-custom mb-2">Valider</button>
-          <button type="reset" class="form-btn-custom mb-2" id="form-resetBtn">Réinitialiser</button>
+        <div class="col-md-4 d-flex flex-column align-items-center boutonSucces-container">
+          <button id="form-valider" type="submit" class="form-btn-custom mb-2">Valider</button>
+          <button  id="form-resetBtn" type="reset" class="form-btn-custom mb-2">Réinitialiser</button>
 
           <script>
            // On sélectionne le bouton de réinitialisation grâce à son id "resetBtn"
