--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -132,13 +132,12 @@ encadre = encadre des champs
     .form-label {
       color: #000000;
     }
-    .form-btn-custom {
-      background-color: #7A90A4;
-      border-color: #7A90A4;
-      border-radius: 10px;
-      color: white;
-      width: 50%;
-      
+    
+    #form-valider , #form-resetBtn{
+        background-color : #709CA7 !important;
+        border-radius : 15px !important;
+        padding : 8px 20px !important;
+        box-shadow: 0 2px 6px black !important;
     }
     .form-control {
       background-color: #FFFFFF;
@@ -150,7 +149,7 @@ encadre = encadre des champs
       padding: 15px;
       border-radius: 10px;
       margin-bottom: 15px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 4px rgba(0,0,0,0.2);
     }
     .form-image-placeholder {
       background-color: #709CA7;
@@ -188,7 +187,11 @@ PAGE SUCCESS*/
     #succes-p {
       color: #344D59;
     }
+    
     /* parametres boutons*/
+    .boutonSucces-container {
+    margin-top: 20px;  /* Ajustez la valeur (en pixels ou rem) selon vos préférences */
+}
     .bouton-succes {
       background-color: #7A90A4;
       border-color: #7A90A4;
